# picocalc-bevy-test

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
assets/: bevy_bird_dark.data
ili9486-driver/: Cargo.toml
ili9486-driver/display-interface/: Cargo.toml
ili9486-driver/display-interface/spi/: Cargo.toml
ili9486-driver/display-interface/spi/src/: lib.rs
ili9486-driver/src/: color.rs  commands.rs  lib.rs  prelude.rs
ili9486-driver/src/gpio/: mod.rs
ili9486-driver/src/io/: mod.rs  shim.rs
src/: keys.rs  lfo.rs  lib.rs  osc.rs  synth.rs
