[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
name = "pico-synth"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.3"
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
libm = "0.2.8"
# panic-halt = "0.2.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rp-hal = { version = "0.0.2", features = ["2040"] }
rp-pico = "0.9.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.2", features = ["critical-section-impl", "rt", "defmt"] }
# rtic = "2.1.1"
# TODO(4) Select the correct rtic backend
rtic = { version = "2.1.1", features = [ "thumbv6-backend" ] }
wmidi = { version = "4.0.10", default-features = false }
# wt-synth-lib = { git = "https://github.com/calacuda/wt-synth-lib", version = "0.1.0" }
# TODO(5) Add hal as dependency
# some-hal = "1.2.3"

# TODO add a monotonic if you use scheduling
# rtic-monotonics = { version = "1.0.0", features = [ "cortex-m-systick" ]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
